------------------------------------------------------------------------
r2114 | gaser | 2022-10-14 15:50:10

Changed paths:
 M CHANGES.txt
R  templates_volumes/Schaefer2018_100Parcels_17Networks_order.csv -> templates_volumes_old/Schaefer2018_100Parcels_17Networks_order.csv
R  templates_volumes/Schaefer2018_100Parcels_17Networks_order.nii -> templates_volumes_old/Schaefer2018_100Parcels_17Networks_order.nii
R  templates_volumes/Schaefer2018_200Parcels_17Networks_order.csv -> templates_volumes_old/Schaefer2018_200Parcels_17Networks_order.csv
R  templates_volumes/Schaefer2018_200Parcels_17Networks_order.nii -> templates_volumes_old/Schaefer2018_200Parcels_17Networks_order.nii
R  templates_volumes/Schaefer2018_400Parcels_17Networks_order.csv -> templates_volumes_old/Schaefer2018_400Parcels_17Networks_order.csv
R  templates_volumes/Schaefer2018_400Parcels_17Networks_order.nii -> templates_volumes_old/Schaefer2018_400Parcels_17Networks_order.nii
R  templates_volumes/Schaefer2018_600Parcels_17Networks_order.csv -> templates_volumes_old/Schaefer2018_600Parcels_17Networks_order.csv
R  templates_volumes/Schaefer2018_600Parcels_17Networks_order.nii -> templates_volumes_old/Schaefer2018_600Parcels_17Networks_order.nii
R  templates_volumes/TPM_Age11.5.nii -> templates_volumes_old/TPM_Age11.5.nii
R  templates_volumes/Template_0_IXI555_MNI152_GS.nii -> templates_volumes_old/Template_0_IXI555_MNI152_GS.nii
R  templates_volumes/Template_1_IXI555_MNI152.nii -> templates_volumes_old/Template_1_IXI555_MNI152.nii
R  templates_volumes/Template_1_IXI555_MNI152_GS.nii -> templates_volumes_old/Template_1_IXI555_MNI152_GS.nii
R  templates_volumes/Template_2_IXI555_MNI152.nii -> templates_volumes_old/Template_2_IXI555_MNI152.nii
R  templates_volumes/Template_2_IXI555_MNI152_GS.nii -> templates_volumes_old/Template_2_IXI555_MNI152_GS.nii
R  templates_volumes/Template_3_IXI555_MNI152.nii -> templates_volumes_old/Template_3_IXI555_MNI152.nii